Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-1978

Race condition for i_size during truncate/mkwrite actions

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.4.0
    • Lustre 2.2.0
    • 3
    • 6319

      There is a race for i_size during the mkwrite action when a truncation is going on. An additional check on the size is required.

            keith Keith Mannthey (Inactive)
            michael_mckay@xyratex.com Michael McKay (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: